docs/book/samples/ch04/unhandled.kso
fn describe none
  "nothing"

fn describe x
  "got {x}"

pub play =
  bad = 10 / 0
  print (describe bad)
